<resources>
    <string name="app_name">Cabaca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home</string>
    <string name="main_page">Main</string>
    <string name="new_books">Buku Terbaru</string>
    <string name="genre">Cari Genre</string>
    <string name="book_detail">Detail Buku</string>
    <string name="writer_detail">Detail Penulis</string>
    <string name="image_book">Image Book</string>
    <string name="book_detail_title">Judul</string>
    <string name="book_detail_genre">Genre</string>
    <string name="book_detail_author">Penulis</string>
    <string name="to_writer_detail">Klik disini untuk informasi penulis.</string>
    <string name="book_detail_desc">SInopsis</string>
    <string name="writer_image">Writer Image</string>
    <string name="writer_detail_name">Nama</string>
    <string name="writer_detail_email">Email</string>
    <string name="writer_detail_phone">Telepon</string>
    <string name="writer_detail_desc">Deskripsi</string>
    <string name="click_for_detail">Klik untuk melihat detail</string>
</resources>