<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/mainPage">

    <fragment
        android:id="@+id/mainPage"
        android:name="com.wildanpurnomo.cabaca.ui.MainFragment"
        android:label="@string/main_page"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainPage_to_bookDetailPage"
            app:destination="@id/bookDetailPage">

            <argument
                android:name="bookDetailArgs"
                app:argType="integer" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/bookDetailPage"
        android:name="com.wildanpurnomo.cabaca.ui.bookDetail.BookDetailFragment"
        android:label="@string/book_detail"
        tools:layout="@layout/fragment_book_detail">

        <argument
            android:name="bookDetailArgs"
            app:argType="integer" />

        <action
            android:id="@+id/action_bookDetailPage_to_writerDetailPage"
            app:destination="@id/writerDetailPage">

            <argument
                android:name="writerDetailArgs"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/writerDetailPage"
        android:name="com.wildanpurnomo.cabaca.ui.writerDetail.WriterDetailFragment"
        android:label="@string/writer_detail"
        tools:layout="@layout/fragment_writer_detail">

        <argument
            android:name="writerDetailArgs"
            app:argType="integer" />
    </fragment>

</navigation>