<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookDetail.BookDetailFragment">

    <ProgressBar
        android:id="@+id/fragBookDetailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:id="@+id/fragBookDetailContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragBookDetailImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_book"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/fragBookDetailTitle"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/book_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragBookDetailTitleValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailTitle"
                tools:text="Marvel Studios' Captain Marvel" />

            <TextView
                android:id="@+id/fragBookDetailGenre"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/book_detail_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailTitleValue" />

            <TextView
                android:id="@+id/fragBookDetailGenreValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailGenre"
                tools:text="July 31, 1999" />

            <TextView
                android:id="@+id/fragBookDetailAuthor"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/book_detail_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailGenreValue" />

            <TextView
                android:id="@+id/fragBookDetailAuthorValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailAuthor"
                tools:text="Adventure, Superhero" />

            <TextView
                android:id="@+id/fragBookDetailToWriterDetail"
                style="@style/TextViewNormalClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/to_writer_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragBookDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailAuthorValue" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragBookDetailToWriterDetail,fragBookDetailImg"
                tools:layout_editor_absoluteY="214dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <TextView
                android:id="@+id/fragBookDetailDesc"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/book_detail_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrier" />

            <TextView
                android:id="@+id/fragBookDetailDescValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragBookDetailDesc"
                tools:text="@tools:sample/lorem/random" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>