<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.writerDetail.WriterDetailFragment">

    <ProgressBar
        android:id="@+id/fragWriterDetailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:id="@+id/fragWriterDetailContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragWriterDetailImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/writer_image"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/fragWriterDetailName"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/writer_detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragWriterDetailNameValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailName"
                tools:text="Marvel Studios' Captain Marvel" />

            <TextView
                android:id="@+id/fragWriterDetailEmail"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/writer_detail_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailNameValue" />

            <TextView
                android:id="@+id/fragWriterDetailEmailValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailEmail"
                tools:text="July 31, 1999" />

            <TextView
                android:id="@+id/fragWriterDetailPhone"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/writer_detail_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailEmailValue" />

            <TextView
                android:id="@+id/fragWriterDetailPhoneValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragWriterDetailImg"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailPhone"
                tools:text="Adventure, Superhero" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragWriterDetailPhoneValue,fragWriterDetailImg"
                tools:layout_editor_absoluteY="214dp" />

            <TextView
                android:id="@+id/fragWriterDetailDesc"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/writer_detail_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrier" />

            <TextView
                android:id="@+id/fragWriterDetailDescValue"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragWriterDetailDesc"
                tools:text="@tools:sample/lorem/random" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>